# personal-os

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  setup_user.py
.claude/commands/: job-prep.md  learn.md  py-start.md
apps/assistant/: cli.py
apps/job_search/: github_readme.py
apps/learning/: cli.py  progress.py
config/: settings.yaml
context/templates/: career.md  finance.md  global-claude-md.md  goals.md  health.md  learning.md  mental_model.md  profile.md  roadmap.md
core/: context_loader.py  provider.py  router.py
decisions/: 001-architecture-foundation.md  002-context-loader-design.md  003-provider-design.md  004-assistant-cli-design.md  005-cost-aware-routing.md  006-learning-guide-design.md  007-persistent-memory-layer.md  008-privacy-data-local-only.md  009-github-readme-auto-updater.md  010-claude-md-constitution-and-skills.md  011-user-onboarding-setup-script.md
