[project]
name = "personal-os"
version = "0.1.0"
requires-python = ">=3.10"
description = "Personal AI platform — one source of truth for life, career, and learning"
dependencies = [
    "litellm",
    "pyyaml",
    "PyGithub",
]

[project.optional-dependencies]
dev = ["ruff", "mypy"]

[project.scripts]
assistant = "apps.assistant.cli:main"
learning  = "apps.learning.cli:main"
github-readme = "apps.job_search.github_readme:main"

[build-system]
requires      = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where   = ["."]
include = ["apps*", "core*"]

# --------------------------------------------------------------------------- #
# Ruff — linter + formatter (replaces black, isort, flake8)                    #
# Run: ruff check . --fix && ruff format .                                     #
# --------------------------------------------------------------------------- #
[tool.ruff]
target-version = "py310"
line-length    = 100

[tool.ruff.lint]
# E/F = pycodestyle + pyflakes, I = isort, UP = pyupgrade, B = bugbear, SIM = simplify
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"

# --------------------------------------------------------------------------- #
# Mypy — static type checking                                                   #
# Run: mypy .                                                                  #
# --------------------------------------------------------------------------- #
[tool.mypy]
python_version        = "3.10"
ignore_missing_imports = true
